# struktur

./: .gitignore  Cargo.toml  README.md  cps.js  roadmap.md  syntax.ebnf  type-system.md
dev/: readme.md
src/cli/: Cargo.toml
src/cli/src/: cli.rs  error.rs  logger.rs  main.rs
src/compiler/: Cargo.toml
src/compiler/src/: diagnostic.rs  lib.rs  patterns.rs  sources.rs  symbols.rs  syntax.rs  text.rs  types.rs
src/compiler/src/snapshots/: struktur__patterns__tests__non_exhaustive.snap  struktur__patterns__tests__nums.snap  struktur__patterns__tests__unreachable_case.snap  struktur__patterns__tests__variable.snap  struktur__patterns__tests__wildcard.snap
src/compiler/src/symbols/: ref_graph.rs  resolution.rs
src/compiler/src/syntax/: lex.rs  nodes.rs  parse.rs  selector.rs  tree.rs
src/compiler/src/syntax/parse/: errors.rs
src/compiler/src/syntax/snapshots/: struktur__syntax__parse__tests__simple_let_expr.snap
src/compiler/src/types/: check.rs  meta_var.rs  pretty_print.rs  provenance.rs
src/compiler/src/types/check/: context.rs  error.rs
src/compiler/src/types/snapshots/: struktur__types__check__tests__generalize_mutually_recursive-2.snap  (+2 more)
src/lib/: Cargo.toml
src/lib/src/: ast.rs  codegen.rs  cps.rs  error.rs  header.js  id.rs  lib.rs  maybe_result.rs  parse.rs  patterns.rs  stage.rs  symbols.rs  text_span.rs  types.rs
src/lib/src/ast/: container.rs  forest.rs  tree.rs  visit.rs
src/lib/src/parse/: lex.rs
src/lib/src/patterns/: matrix.rs
src/lib/src/symbols/: resolution.rs
src/lib/src/types/: inference.rs  pretty_print.rs
(+17 files in other folders)
