[package]
name = "struktur"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
itertools = "0.14.0"
logos = "0.16.1"
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = { version = "1.1.1", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
